# SourceSearch

./: .gitignore  README.md  start_server.sh
backend/: requirements.txt
backend/api/: README.md  main.py
backend/crawler/: collect_data.py  crawl.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.jsx  App.tsx  index.css
frontend/src/components/: Aurora.tsx  Beams.tsx  CodeViewer.css  CodeViewer.tsx  Footer.tsx  SearchBar.css  SearchBar.tsx  SearchResults.css  SearchResults.tsx
frontend/src/pages/: About.css  About.tsx  Dashboard.css  Dashboard.tsx  Home.tsx  SearchResultsPage.css  SearchResultsPage.tsx
search-engine/: .gitignore  CMakeLists.txt
search-engine/src/: fileFunctions.cpp  fileFunctions.h  indexer.cpp  indexer.h  main.cpp  searcher.cpp  searcher.h  server.cpp  server.h  test  test.cpp
search-engine/test_data/: example.py
